Use <aside> instead of <blockquote>
It's more semantically correct, at least for all of my current use
cases.

--- a/config.yaml
+++ b/config.yaml
@@ -2,5 +2,8 @@ baseURL: https://jasoncarloscox.com/
 languageCode: en-us
 title:  Jason Cox
 markup:
+  goldmark:
+    renderer:
+      unsafe: true
   highlight:
     codeFences: false
