Improve RSS metadata presentation

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://jasoncarloscox.com/
 languageCode: en-us
-title:  Jason Cox
+title:  jasoncarloscox.com
 markup:
   goldmark:
     renderer:
